[package]
name = "figterm"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[features]
# Tests that do not work on CI
desktop-tests = []
profiling_early_exit = []

[dependencies]
alacritty_terminal = { path = "../lib/alacritty_terminal" }
anyhow = "1.0.66"
async-trait = "0.1.57"
bitflags = "1.3.2"
bytes = "1.3.0"
cfg-if = "1.0.0"
clap = { version = "4.0.26", features = ["derive", "deprecated"] }
crossterm = "0.25.0"
dashmap = "5.3.4"
fig_api_client = { path = "../lib/fig_api_client" }
fig_color = { path = "../lib/fig_color" }
fig_ipc = { path = "../lib/fig_ipc" }
fig_log = { path = "../lib/fig_log" }
fig_proto = { path = "../lib/fig_proto" }
fig_settings = { path = "../lib/fig_settings" }
fig_telemetry = { path = "../lib/fig_telemetry" }
fig_util = { path = "../lib/fig_util" }
filedescriptor = "0.8"
flume = "0.10.14"
fnv = "1.0.7"
memmem = "0.1.1"
num-traits = "0.2"
once_cell = "1.16.0"
parking_lot = "0.12.1"
pin-project = "1.0.12"
portable-pty = "0.7.0"
regex = "1.6.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
shell-words = "1.1"
sysinfo = { version = "0.26.7", default-features = false }
tokio = { version = "1.20.1", features = ["full"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "time", "parking_lot"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
which = "4.3.0"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4"
shared_library = "0.1"
windows = { version = "0.43.0", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = [
    "winuser",
    "winnls",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
] }
winreg = "0.10"

