[package]
name = "figterm"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
# Tests that do not work on CI
desktop-tests = []
profiling_early_exit = []

[dependencies]
alacritty_terminal = { path = "../lib/alacritty_terminal" }
anyhow = "1.0.69"
async-trait = "0.1.73"
bitflags = "2.4.0"
bstr = "1.1.0"
bytes = "1.4.0"
cfg-if = "1.0.0"
clap = { version = "4.4.0", features = ["derive", "deprecated"] }
console = "0.15.2"
crossterm = "0.27.0"
dashmap = "5.3.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
fig_api_client = { path = "../lib/fig_api_client" }
fig_ipc = { path = "../lib/fig_ipc" }
fig_log = { path = "../lib/fig_log" }
fig_proto = { path = "../lib/fig_proto" }
fig_request = { path = "../lib/fig_request" }
fig_settings = { path = "../lib/fig_settings" }
fig_telemetry = { path = "../lib/fig_telemetry" }
fig_util = { path = "../lib/fig_util" }
filedescriptor = "0.8"
flume = "0.11.0"
fnv = "1.0.7"
memmem = "0.1.1"
num-traits = "0.2"
once_cell = "1.18"
parking_lot = "0.12.1"
pin-project = "1.0.12"
portable-pty = "0.8.0"
radix_trie = "0.2.1"
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-color = { path = "../lib/shell-color" }
shell-words = "1.1"
sysinfo = { version = "0.29.8", default-features = false }
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "time",
    "parking_lot",
] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
which = "5.0.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = [
    "term",
    "ioctl",
    "process",
    "signal",
    "fs",
] }

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4"
shared_library = "0.1"
windows = { version = "0.51.1", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = [
    "winuser",
    "winnls",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
] }
winreg = "0.51.0"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.1"
