[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fig_ipc = { path = "../../lib/fig_ipc" }
fig_util = { path = "../../lib/fig_util" }
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
fig_proto = { version = "0.12.0", path = "../../lib/fig_proto", features = [
    "arbitrary",
] }
once_cell = "1.18.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "local_ipc"
path = "fuzz_targets/local_ipc.rs"
test = false
doc = false
