[package]
name = "fig_tauri"
version = "0.1.0"
authors = ["fig developers"]
edition = "2021"
rust-version = "1.57"
description = "A Tauri App"
homepage = "https://fig.io"
publish = false
default-run = "fig_tauri"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }
image = "0.24.1"

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
bytes = "1.1.0"
cfg-if = "1.0.0"
dashmap = "5.2.0"
fnv = "1.0.7"
fig_ipc = { path = "../../rust-lib/fig_ipc" }
fig_log = { path = "../../rust-lib/fig_log" }
fig_proto = { path = "../../rust-lib/fig_proto" }
fig_settings = { path = "../../rust-lib/fig_settings" }
fig_telemetry = { version = "0.1.0", path = "../../rust-lib/fig_telemetry" }
hashbrown = "0.12.0"
once_cell = "1.10.0"
parking_lot = "0.12.0"
url = "2.2.2"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
shellexpand = "2.1.0"
tauri = { version = "1.0.0-rc.6", features = ["api-all", "devtools", "macos-private-api", "system-tray"] }
tokio = { version = "1.17.0", features = [ "rt", "rt-multi-thread", "sync", "fs", "io-util" ] } # same version as tauri
tracing = "0.1.34"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.36.0", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "Win32_System_Ole", "Win32_Graphics_Gdi"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
