[package]
name = "fig_tauri"
version = "2.0.0"
authors = ["fig developers"]
edition = "2021"
rust-version = "1.57"
description = "Fig adds IDE-style autocomplete to your existing terminal"
homepage = "https://fig.io"
publish = false
default-run = "fig_tauri"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.11", features = [] }
image = "0.24.2"

[dependencies]
anyhow = "1.0.57"
camino = "1.0.9"
clap = "3.1.0"
base64 = "0.13.0"
bytes = "1.1.0"
cfg-if = "1.0.0"
dashmap = "5.3.1"
fnv = "1.0.7"
fig_auth = { path = "../../rust-lib/fig_auth/" }
fig_directories = { path = "../../rust-lib/fig_directories" }
fig_ipc = { path = "../../rust-lib/fig_ipc" }
fig_log = { path = "../../rust-lib/fig_log" }
fig_proto = { path = "../../rust-lib/fig_proto" }
fig_settings = { path = "../../rust-lib/fig_settings" }
fig_telemetry = { version = "0.1.0", path = "../../rust-lib/fig_telemetry" }
gtk = { version = "0.15", features = [ "v3_22" ] }
hashbrown = "0.12.0"
image = "0.24.2"
moka = "0.8.4"
once_cell = "1.12.0"
parking_lot = "0.12.0"
regex = "1.5.6"
url = "2.2.2"
percent-encoding = "2.1.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
shellexpand = "2.1.0"
sysinfo = "0.23.13"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1.34"
whoami = "1.2.1"
wry = { version = "0.17.0", default-features = false, features = ["gtk-tray", "protocol", "devtools", "transparent"]}

[target.'cfg(windows)'.dependencies]
windows = { version = "0.37.0", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "Win32_System_Ole", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os="linux")'.dependencies]
x11rb = "0.9.0"
freedesktop-icons = "0.2.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ ]
