[package]
name = "alacritty_terminal"
version = "0.15.1-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2021"

[dependencies]
bitflags = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
vte = { version = "0.10.0", default-features = false }
log = "0.4"
unicode-width = "0.1"
base64 = "0.13.0"
regex-automata = "0.1.9"

[dev-dependencies]
serde_json = "1.0.0"
