[package]
name = "figterm"
version = "4.0.3"
authors = ["Fig"]
edition = "2021"
description = "A layer between the terminal and shell."
homepage = "https://fig.io"
repository = "https://github.com/withfig/macos"
publish = false

[features]
default = ["desktop-tests"]
# Tests that do not work on CI
desktop-tests = []

[dependencies]

# System Libs
nix = "0.23.1"
signal-hook = "0.3.13"

# Async Libs
tokio = { version = "1.16.1", features = ["full"] }

# Logging
log = { version = "0.4.14", features = ["std"] }

# User dirs
dirs = "4.0.0"

# Protocal buffers
prost = "0.9.0"
bytes = "1.1.0"

# Error Handling
anyhow = "1.0.53"

# Cmd arg parsing
clap = { version = "3.0.14", features = ["derive"] }

# Terminal emulator
alacritty_terminal = { path = "../alacritty_terminal" }

# Fast concurrency libs
parking_lot = "0.12.0"
crossbeam = "0.8.1"

# Sqlite lib
rusqlite = { version = "0.26.3", features = ["bundled"] }

# Fast concurrent hashmap
dashmap = "4.0.2"
fnv = "1.0.7"

# Allocation free data structures
flume = "0.10.10"

once_cell = "1.9.0"

regex = "1.5.4"

sentry = { version = "0.24.2", features = ["anyhow"] }

[build-dependencies]
prost-build = "0.9.0"

[profile.release]
debug = true
