[package]
name = "alacritty_terminal"
edition.workspace = true
version.workspace = true
publish.workspace = true
authors = [
    "Christian Duerr <contact@christianduerr.com>",
    "Joe Wilm <joe@jwilm.com>",
]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://github.com/alacritty/alacritty"

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
camino = { version = "1.1", features = ["serde1"] }
fig_color = { path = "../fig_color" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
unicode-width = "0.1"
vte = { version = "0.12.0", default-features = false }
