[package]
name = "auth"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
aws-credential-types = "0.56.1"
aws-sdk-ssooidc = "0.33.0"
aws-smithy-async = "0.56.1"
aws-smithy-runtime-api = { version = "0.56.1", features = ["http-auth"] }
aws-types = "0.56.1"
fig_telemetry = { path = "../fig_telemetry" }
fig_util = { path = "../fig_util" }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
