[package]
name = "auth"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aws-credential-types = "1.0.3"
aws-sdk-ssooidc = "1.4.0"
aws-smithy-async = "1.0.3"
aws-smithy-runtime-api = { version = "1.0.3", features = ["http-auth"] }
aws-types = "1.0.3"
fig_settings = { path = "../fig_settings" }
fig_util = { path = "../fig_util" }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
insta = "1.34.0"
