[package]
name = "auth"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aws-credential-types = "1.0.3"
aws-sdk-ssooidc = "1.4.0"
aws-smithy-async = "1.0.3"
aws-smithy-runtime-api = { version = "1.0.3", features = ["http-auth"] }
aws-types.workspace = true
fig_settings.workspace = true
fig_util.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
