[package]
name = "aws-toolkit-telemetry-definitions"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
convert_case = "0.6.0"
prettyplease = "0.2.15"
quote = "1.0.33"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
syn = "2.0.38"

[dependencies]
amzn-toolkit-telemetry = { path = "../amzn-toolkit-telemetry" }
