[package]
name = "dbus"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
once_cell = "1.18"
thiserror = "1.0"
tokio = { version = "1", features = ["process", "sync", "parking_lot"] }
tracing = "0.1"
zbus = { version = "3", default-features = false, features = ["tokio"] }
