[package]
name = "dbus"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
once_cell.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zbus = { path = "../zbus" }
