[package]
name = "fig_api_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
fig_request = { path = "../fig_request" }
fig_settings = { path = "../fig_settings" }
fig_util = { path = "../fig_util" }
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }
tokio = { version = "1", features = ["process"] }
tracing = "0.1"
which = "5.0.0"
aws-smithy-types = "1.0.3"
# aws-smithy-http = "0.60.0"
aws-smithy-async = "1.0.3"
# aws-smithy-client = { version = "0.60.0", features = [
#     "rt-tokio",
#     "rustls",
#     "client-hyper",
# ] }
aws-smithy-runtime-api = "1.0.3"
tower = "0.4.13"
http = "0.2.9"
aws-config = "1.0.3"
aws-credential-types = "1.0.3"
bytes = "1.5.0"
amzn-codewhisperer-client = { path = "../amzn-codewhisperer-client" }
once_cell = "1.18"
strum = { version = "0.25.0", features = ["derive"] }
auth = { path = "../auth" }

[dev-dependencies]
tracing-subscriber = "0.3.17"
