[package]
name = "fig_api_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
fig_request.workspace = true
fig_settings.workspace = true
fig_util.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
url = { version = "2.3.1", features = ["serde"] }
tokio.workspace = true
tracing.workspace = true
which = "6.0.0"
aws-smithy-types = "1.0.3"
aws-smithy-async = "1.0.3"
aws-smithy-runtime-api = "1.0.3"
tower = "0.4.13"
http = "1.1.0"
aws-config = "1.0.3"
aws-credential-types = "1.0.3"
bytes.workspace = true
amzn-codewhisperer-client = { path = "../amzn-codewhisperer-client" }
once_cell.workspace = true
strum = { version = "0.26.1", features = ["derive"] }
auth = { path = "../auth" }
amzn-codewhisperer-streaming-client = { path = "../amzn-codewhisperer-streaming-client" }

[dev-dependencies]
tracing-subscriber = "0.3.17"
