[package]
name = "fig_color"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bitflags = "2.0.0"
nu-ansi-term = "0.49.0"
nu-color-config = "0.83.1"
# fix for strip-ansi-escapes breaking on the 0.1.2 release
strip-ansi-escapes = "=0.1.1"

[dev-dependencies]
fig_test = { path = "../fig_test" }
