[package]
name = "fig_daemon"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[features]
unsafe-tests = []

[dependencies]
camino = "1.1.1"
fig_util = { path = "../fig_util" }
once_cell = { version = "1.17.1", features = ["parking_lot"] }
regex = "1.7.1"
thiserror = "1.0.38"

[target.'cfg(unix)'.dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
fig_ipc = { path = "../fig_ipc" }
fig_proto = { path = "../fig_proto" }
winreg = "0.10.1"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
