[package]
name = "fig_desktop_api"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.73"
auth = { path = "../auth" }
base64 = "0.21.0"
bincode = "1.3.3"
camino = { version = "1.1.3", features = ["serde1"] }
cfg-if = "1.0.0"
dashmap = "5.4.0"
fig_api_client = { path = "../fig_api_client" }
fig_install = { path = "../fig_install" }
fig_integrations = { path = "../fig_integrations" }
fig_proto = { path = "../fig_proto" }
fig_settings = { path = "../fig_settings" }
fig_telemetry = { path = "../fig_telemetry" }
fig_util = { path = "../fig_util" }
fnv = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.0.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4"] }
which = "6.0.0"
whoami = "1.3.0"

[target.'cfg(target_os="macos")'.dependencies]
macos-utils = { path = "../macos-utils" }
