[package]
name = "fig_desktop_api"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
auth = { path = "../auth" }
base64.workspace = true
bincode = "1.3.3"
camino.workspace = true
cfg-if.workspace = true
dashmap = "5.4.0"
fig_api_client.workspace = true
fig_install.workspace = true
fig_integrations.workspace = true
fig_proto.workspace = true
fig_settings.workspace = true
fig_telemetry.workspace = true
fig_util.workspace = true
fnv = "1.0.7"
serde.workspace = true
serde_json.workspace = true
shellexpand = "3.0.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
which = "6.0.0"
whoami = "1.3.0"

[target.'cfg(target_os="macos")'.dependencies]
macos-utils = { path = "../macos-utils" }
