[package]
name = "fig_diagnostic"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
cfg-if = "1.0.0"
clap = "4.1.3"
fig_ipc = { path = "../fig_ipc" }
fig_proto = { path = "../fig_proto" }
fig_telemetry = { path = "../fig_telemetry" }
fig_util = { path = "../fig_util" }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.104"
sysinfo = "0.29.8"
time = "0.3.19"
