[package]
name = "fig_diagnostic"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
clap.workspace = true
fig_ipc.workspace = true
fig_proto.workspace = true
fig_telemetry.workspace = true
fig_util.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.30.5"
time.workspace = true
