[package]
name = "fig_graphql"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
fig_request = { version = "2.5.3", path = "../fig_request" }
graphql_client = "0.11.0"
serde = "1.0.145"
serde_json = { version = "1.0.85", features = ["arbitrary_precision"] }
time = { version = "0.3.17", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
convert_case = "0.6.0"
