[package]
name = "fig_graphql"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[features]
dispatch = [
    "dep:fig_ipc",
    "dep:fig_proto",
    "dep:fig_settings",
    "dep:fig_util",
    "dep:thiserror",
]

[dependencies]
fig_ipc = { path = "../fig_ipc", optional = true }
fig_proto = { path = "../fig_proto", optional = true }
fig_request = { path = "../fig_request" }
fig_settings = { path = "../fig_settings", optional = true }
fig_util = { path = "../fig_util", optional = true }
graphql_client = "0.11.0"
serde = "1.0.150"
serde_json = { version = "1.0.89", features = ["arbitrary_precision"] }
thiserror = { version = "1.0.37", optional = true }
time = { version = "0.3.17", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
convert_case = "0.6.0"
regex = "1.7.0"
