[package]
name = "fig_history"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
fig_util = { path = "../fig_util" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0.96"
thiserror = "1.0.38"
tracing = "0.1.37"
