[package]
name = "fig_install"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
gamma = ["fig_util/gamma"]

[dependencies]
bitflags = "2.4.0"
camino = "1.1.3"
cfg-if = "1.0.0"
fig_request = { path = "../fig_request" }
fig_integrations = { path = "../fig_integrations" }
fig_util = { path = "../fig_util" }
once_cell = "1.18"
regex = "1.6.0"
reqwest = { version = "0.11.22", default-features = false }
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.4.0"
thiserror = "1.0"
tokio = "1"
tracing = "0.1"
fig_settings = { path = "../fig_settings" }
strum = "0.26.1"
fig_telemetry = { path = "../fig_telemetry" }
serde_json = "1.0"
ring = "0.17.5"
hex = "0.4.3"
bytes = "1.5.0"
time = "0.3.30"
cookie = "0.18.0"
url = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
fig_ipc = { path = "../fig_ipc" }
libc = "0.2.138"
security-framework = "2.8.2"
