[package]
name = "fig_install"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
gamma = ["fig_util/gamma"]

[dependencies]
bitflags = "2.4.0"
bytes = "1.5.0"
camino = "1.1.3"
cfg-if = "1.0.0"
cookie = "0.18.0"
fig_integrations = { path = "../fig_integrations" }
fig_request = { path = "../fig_request" }
fig_settings = { path = "../fig_settings" }
fig_telemetry = { path = "../fig_telemetry" }
fig_util = { path = "../fig_util" }
hex = "0.4.3"
regex = "1.6.0"
reqwest = { version = "0.12", default-features = false }
ring = "0.17.8"
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.1"
tempfile = "3.4.0"
thiserror = "1.0"
time = "0.3.30"
tokio = "1"
tracing = "0.1"
url = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
fig_ipc = { path = "../fig_ipc" }
libc = "0.2.138"
security-framework = "2.8.2"
