[package]
name = "fig_integrations"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
dispatch = ["dep:dispatch"]

[dependencies]
async-trait = "0.1.73"
cfg-if = "1.0.0"
clap = { version = "4.4.0", features = ["derive", "deprecated"] }
dirs = "5.0.0"
fig_util = { path = "../fig_util" }
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = "0.29.8"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = { version = "0.2.0", optional = true }
macos-utils = { path = "../macos-utils" }
fig_telemetry = { path = "../fig_telemetry" }
accessibility-sys = { path = "../macos-utils/accessibility-master/accessibility-sys", version = "0.1.3" }
core-foundation = "0.9.3"
plist = "1.4.0"
objc = "0.2.7"
fig_settings = { path = "../fig_settings" }
