[package]
name = "fig_ipc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1.64"
bytes = "1.3.0"
cfg-if = "1.0.0"
fig_proto = { path = "../fig_proto" }
fig_util = { path = "../fig_util" }
pin-project-lite = "0.2.9"
thiserror = "1.0.38"
tokio = { version = "1.20.1", features = ["fs", "time", "io-util", "net"] }
tracing = "0.1.36"
whoami = "1.3.0"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
